src/test/resources/de/monticore/umlcd4a/cocos/ebnf/invalid/C4A11.cd
package de.monticore.umlcd4a.cocos.ebnf.invalid;

classdiagram C4A11 {
  class C1 {
    String a = 1;
    
    int b = "str";
    Integer b2 = "str";
    
    float c = "str";
    float c2 = 1.1;
    Float c3 = 1.1;
    
    Double d = 1;
    double d2 = 1;
    
    long e = 1;
    Long e2 = 1;
   
    Character f = "a";
    char f2 = "a"; 
  }
}
